<resources>
    <string name="app_name">InstallmentApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer_name">Customer Name*</string>
    <string name="customer_phone">Customer Phone*</string>
    <string name="customer_address">Customer Address</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="required_field">Required*</string>
    <string name="optional_field">Optional</string>
    <string name="save">save</string>
    <string name="customers">Customers</string>
    <string name="customer_info">Customer Information</string>
    <string name="next">Next</string>
    <string name="total_price">Total Price</string>
    <string name="total_profit">Total Profit</string>
    <string name="profit_rate">profit rate %</string>
    <string name="original_price">Original Price</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
    <string name="payment_value">Payment Value</string>
    <string name="first_payment_date">First Payment Date </string>
    <string name="installment_details">Installment Details</string>
    <string name="payment_details">Payment Details</string>
    <string name="payment">Payment</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="payment_date">Payment Date</string>
    <string name="edit_date">Edit Date</string>
    <string name="payment_state">Payment State</string>
    <string name="received">Received</string>
    <string name="payment_received">Payment Received</string>
    <string name="delete_completed">Delete Complete</string>
    <string name="from_total">From Total</string>
    <string name="from_payments">From Payments</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirm">Confirm</string>
    <string name="settings">Settings</string>
    <string name="analytics">Analytics</string>
    <string name="tools">Tools</string>
    <string name="search">Search</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="edit">Edit</string>
    <string name="unreceived">Unreceived</string>
    <string name="total">Total</string>
    <string name="total_received">Total Received</string>
    <string name="received_payments">Received Payments</string>
    <string name="remaining">Remaining</string>
    <string name="user_avatar">User Avatar</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="installment_count">Installment count</string>
    <string name="date">Date</string>
    <string name="payments">Payments</string>
    <string name="end">End</string>
    <string name="start">Start</string>
</resources>