<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/settingFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        />
    <item android:id="@+id/analyticsFragment"
        android:title="@string/analytics"
        android:icon="@drawable/ic_baseline_analytics_24"
        />
    <item android:id="@+id/toolFragment"
        android:title="@string/tools"
        android:icon="@drawable/ic_baseline_perm_data_setting_24"
        />

    <item
        android:title="@string/search"
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />

</menu>