<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_received"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_received"

         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_inst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"

         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
         />
</LinearLayout>