<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:foreground="?selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <dev.kkarot.installmentapp.views.PaymentState
            android:id="@+id/paymentState"
            android:layout_width="10dp"
            android:layout_height="0dp"
            android:contentDescription="@string/payment_state"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintStart_toEndOf="@+id/paymentState"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_amount"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintStart_toEndOf="@+id/linearLayout7"
            app:layout_constraintTop_toTopOf="@+id/linearLayout7">

            <TextView
                android:id="@+id/payment_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall" />

            <TextView
                android:id="@+id/payment_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <TextView
                android:id="@+id/payment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_installment"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/trans_back"
            app:icon="@drawable/cash2"
            app:iconGravity="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>