<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/edit_installment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.18">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/start"
                android:textAlignment="textStart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/end" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout9"
            app:layout_constraintStart_toStartOf="@+id/linearLayout10"
            app:layout_constraintTop_toTopOf="@+id/linearLayout5">

            <TextView
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="3dp" />

            <TextView
                android:id="@+id/end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="3dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/linearLayout5"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/received" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/payments" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/linearLayout9"
            app:layout_constraintTop_toTopOf="@+id/linearLayout9">

            <TextView
                android:id="@+id/received"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp" />


            <TextView
                android:id="@+id/due"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_installment"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/trans_back"
            app:icon="@drawable/option"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

